Edit: Calculator backgroundcolor fixed. Texts more readable.

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -6,7 +6,7 @@
 
   .MainLeft,
   .MainRight {
-    background-color: rgb(200, 200, 200, 0.5);
+    background-color: rgb(225, 225, 225, 0.7);
     margin: 0px 7px;
     padding: 1%;
     border-radius: 15px;
